# open-speech-studio

./: .gitattributes  .gitignore  LICENSE  README.md  build.bat  index.html  install-vctools.bat  package-lock.json  package.json  server.cjs  setup.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: auto-assign-issues.yml  build.yml  check.yml  release.yml
docs/superpowers/plans/: 2026-04-03-v07-multi-transcription-plan.md
docs/superpowers/specs/: 2026-04-03-v07-multi-transcription-design.md
scripts/: _add_login_i18n.py  _add_remote_signin_i18n.py  _add_signin_prompt_i18n.py  _add_v2_i18n.py  generate-sounds.js  install-linux.sh  install-windows.ps1
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  audio.rs  auth.rs  autocorrect.rs  convert.rs  dictionary.rs  job_queue.rs  lib.rs  main.rs  meeting_writer.rs  settings.rs  speaker.rs  spellcheck.rs  transcriber.rs
src-tauri/src/wordlists/: de.txt  en.txt  fr.txt  nl.txt
src-tauri/tests/: incremental_test.rs
src/components/: About.tsx  DictationOverlay.tsx  DictionaryEditor.tsx  FileTranscriber.tsx  MeetingIndicator.tsx  MeetingRecorder.tsx  MicTest.tsx  ModelManager.tsx  Ribbon.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TranscriptionView.tsx  VoiceTraining.tsx
src/lib/: api.ts  authStore.ts  i18n.tsx  sounds.ts
src/locales/: bg.ts  cs.ts  da.ts  de.ts  el.ts  en.ts  es.ts  fi.ts  fr.ts  hr.ts  hu.ts  it.ts  ja.ts  ko.ts  nl.ts  no.ts  pl.ts  pt.ts  ro.ts  ru.ts  sk.ts  sv.ts  tr.ts  uk.ts  zh.ts
src/styles/: app.css
