[package]
name = "open-speech-studio"
version = "0.7.0"
description = "Open source local AI speech-to-text"
authors = ["OpenAEC Foundation"]
license = "Apache-2.0"
repository = "https://github.com/OpenAEC-Foundation/open-speech-studio"
edition = "2021"

[lib]
name = "open_speech_studio_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
enigo = "0.2"
dirs = "5"
log = "0.4"
env_logger = "0.11"
regex-lite = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "flac", "wav", "pcm"] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
ndarray = "0.17"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "s"
strip = true
